--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
-.App {
+*{
+  box-sizing: border-box;
+}
+.app-header{
+  width: 100%;
+  height: 100px;
+  background-color: black;
   text-align: center;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
-
-.App-logo {
-  height: 40vmin;
+.app-footer{
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.app-text{
   color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  font-size: 32px;
 }
