changed states from objects to arrays so I could map them. mapping films to create list items

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@
   color: white;
   font-size: 32px;
 }
+
+.main-window{
+  position: relative;
+}
+.film-list{
+  position: absolute;
+  left: 40%;
+  top: -10%;
+  width: 200px;
+  height: 100%;
+}
