--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,13 @@
   position: relative;
 }
 .film-list{
+  margin-top: 50px;
   position: absolute;
-  left: 40%;
+  left: 10%;
   top: 100px;
   width: 200px;
-  height: 100%;
+  height: 500px;
+  overflow: auto;
+  border: 3px solid rgba(0, 0, 0, 0.146);
+  border-radius: 3px;
 }
