--- a/src/Components/InfoBox/InfoBox.css
+++ b/src/Components/InfoBox/InfoBox.css
@@ -16,3 +16,14 @@
     border: 3px solid rgba(0, 0, 0, 0.146);
     border-radius: 3px;
   }
+
+  .ghibli-detail-container{
+      position: absolute;
+      width: 800px;
+      height: 500px;
+      border: 3px solid black;
+      border-radius: 4px;
+      top: 25%;
+      left: 31%;
+      background-color: rgba(239, 248, 226, 0.87);
+  }
