need to finish adding details to details box

--- a/src/Components/InfoBox/InfoBox.css
+++ b/src/Components/InfoBox/InfoBox.css
@@ -21,9 +21,10 @@
       position: absolute;
       width: 800px;
       height: 500px;
-      border: 3px solid black;
+      border: 3px solid rgba(0, 0, 0, 0.432);
       border-radius: 4px;
       top: 25%;
       left: 30.3%;
       background-color: rgba(239, 248, 226, 0.87);
+      overflow: scroll;
   }
