--- a/src/Components/Toolbar/Toolbar.css
+++ b/src/Components/Toolbar/Toolbar.css
@@ -14,6 +14,9 @@
       height: 100%;
       padding: 0 1rem;
   }
+  .toolbar-logo{
+      margin-left: 1rem;
+  }
   .toolbar-navigation-items a{
     text-decoration: none;
     color: white;
@@ -28,9 +31,13 @@
       padding: 0 0.5rem;
   }
   .toolbar-navigation-items a:hover{
-
+    color: blueviolet;
   }
 
   .toolbar-navigation-items a:active{
+    color: blueviolet;
+  }
 
+  .spacer{
+      flex: 1;
   }
