need to add buttons to go to different pages

--- a/src/Components/Toolbar/Toolbar.css
+++ b/src/Components/Toolbar/Toolbar.css
@@ -17,6 +17,9 @@
   .toolbar-logo{
       margin-left: 1rem;
   }
+  .toolbar-logo h1{
+      color: white;
+  }
   .toolbar-navigation-items a{
     text-decoration: none;
     color: white;
