--- a/src/Components/SideDrawer/SideDrawer.css
+++ b/src/Components/SideDrawer/SideDrawer.css
@@ -1,7 +1,9 @@
 .side-drawer{
     z-index: 1000;
     height: 100%;
-    background: white;
+    background-image: url(../../assets/ghibli2.png);
+    background-position: center;
+    background-size: cover;
     box-shadow: 2px 0px 5px rgba(0,0,0,0.5);
     position: fixed;
     top: 0;
