--- a/src/Components/SideDrawer/SideDrawer.css
+++ b/src/Components/SideDrawer/SideDrawer.css
@@ -28,7 +28,7 @@
     margin: 0.5rem 0;
 }
 .side-drawer a{
-    color: cornflowerblue;
+    color: white;
     text-decoration: none;
     font-size: 1.2rem;
 }
