--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,16 @@
 }
 .app-text{
   color: white;
-  font-size: 32px;
+  font-size: 16px;
+  text-decoration: none;
+}
+a{
+  padding: 0 1rem;
+  text-decoration: none;
+}
+a:hover{
+  color: burlywood;
+  text-decoration: none;
 }
 
 .main-window{
