--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,9 @@ a:hover{
   border: 3px solid rgba(0, 0, 0, 0.146);
   border-radius: 3px;
 }
+
+.div-express-form{
+  position: absolute;
+  top: 40%;
+  left: 35%;
+}
