--- a/src/Components/CreateBox/CreateBox.css
+++ b/src/Components/CreateBox/CreateBox.css
@@ -1,8 +1,13 @@
 .create-box-container{
-    top: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 500px;
-    height: 400px;
-    border: 5px solid black;
-    position: absolute;
-    
+    height: 250px;
+    border: 3px solid rgba(0, 0, 0, 0.762);
+    border-radius: 6px;
+    background-color: rgba(142, 162, 167, 0.742);
+}
+.create-box-container h2{
+    color: rgb(79, 20, 20);
 }
