--- a/src/Components/List.css
+++ b/src/Components/List.css
@@ -4,6 +4,7 @@
 
 .text-color-white{
     color: white;
+    font-family: 'Poppins', sans-serif;
 }
 .text-color-white:hover{
     color: rgb(249, 249, 175);
