--- a/src/Components/InfoBox/InfoBox.css
+++ b/src/Components/InfoBox/InfoBox.css
@@ -1,34 +1,53 @@
-.info-box-container{
-    width: 800px;
-    height: 500px;
+.info-box-container {
+  display: flex;
+  max-width: 1000px;
+  height: 500px;
+
+  margin: 20vh;
 }
 
-.film-list{
-    margin-top: 50px;
-    position: absolute;
-    left: 20%;
-    top: 200px;
-    width: 200px;
+.film-list {
+  max-width: 200px;
+  overflow: auto;
+  border: 3px solid rgba(0, 0, 0, 0.146);
+  border-radius: 3px;
+}
+
+.ghibli-detail-container {
+  text-align: left;
+  max-width: 800px;
+  padding: 1vh 40vw 0 1vw;
+  height: 500px;
+  border: 3px solid rgba(0, 0, 0, 0.432);
+  border-radius: 4px;
+  background-color: rgba(239, 248, 226, 0.747);
+  overflow: scroll;
+  box-shadow: 15px 15px 20px 1px rgba(0, 0, 0, 0.75);
+}
+
+.opaque {
+  background-color: rgba(205, 104, 73, 0.797);
+  border: rgb(210, 145, 125);
+}
+
+@media only screen and (max-width: 425px) {
+  .info-box-container {
+    display: flex;
+    max-width: 100vw;
     height: 500px;
+    margin: 20vh 0 0 0;
+  }
+  .ghibli-detail-container {
+    min-width: 50vw;
+    height: 60vh;
+    border: 2px solid rgba(0, 0, 0, 0.432);
+    border-radius: 4px;
+  }
+  .film-list {
+    min-width: 50vw;
+    height: 61vh;
     overflow: auto;
     border: 3px solid rgba(0, 0, 0, 0.146);
     border-radius: 3px;
   }
-
-  .ghibli-detail-container{
-      position: absolute;
-      width: 800px;
-      height: 500px;
-      border: 3px solid rgba(0, 0, 0, 0.432);
-      border-radius: 4px;
-      top: 25%;
-      left: 30.3%;
-      background-color: rgba(239, 248, 226, 0.747);
-      overflow: scroll;
-      box-shadow: 15px 15px 20px 1px rgba(0,0,0,0.75);
-  }
-
-  .opaque{
-    background-color: rgba(205, 104, 73, 0.797);
-    border: rgb(210, 145, 125);
 }
