--- a/src/Components/List.css
+++ b/src/Components/List.css
@@ -1,11 +1,7 @@
-.list-component-container{
-    position: relative;
+.text-color-white {
+  color: white;
+  font-family: "Poppins", sans-serif;
 }
-
-.text-color-white{
-    color: white;
-    font-family: 'Poppins', sans-serif;
-}
-.text-color-white:hover{
-    color: rgb(249, 249, 175);
+.text-color-white:hover {
+  color: rgb(249, 249, 175);
 }
