--- a/src/Components/InfoBox/InfoBox.css
+++ b/src/Components/InfoBox/InfoBox.css
@@ -2,7 +2,6 @@
   display: flex;
   max-width: 1000px;
   height: 500px;
-
   margin: 20vh;
 }
 
@@ -15,14 +14,18 @@
 
 .ghibli-detail-container {
   text-align: left;
-  max-width: 800px;
+  max-width: 45vw;
   padding: 1vh 40vw 0 1vw;
-  height: 500px;
+  max-height: 500px;
   border: 3px solid rgba(0, 0, 0, 0.432);
   border-radius: 4px;
   background-color: rgba(239, 248, 226, 0.747);
   overflow: scroll;
   box-shadow: 15px 15px 20px 1px rgba(0, 0, 0, 0.75);
+}
+.infobox-detail {
+  min-width: 40vw;
+  padding: 0.5vh;
 }
 
 .opaque {
@@ -38,7 +41,7 @@
     margin: 20vh 0 0 0;
   }
   .ghibli-detail-container {
-    min-width: 50vw;
+    max-width: 50vw;
     height: 60vh;
     border: 2px solid rgba(0, 0, 0, 0.432);
     border-radius: 4px;
@@ -49,5 +52,8 @@
     overflow: auto;
     border: 3px solid rgba(0, 0, 0, 0.146);
     border-radius: 3px;
+  }
+  .infobox-detail {
+    min-width: 45vw;
   }
 }
