--- a/src/Components/CreateBox/CreateBox.css
+++ b/src/Components/CreateBox/CreateBox.css
@@ -4,15 +4,20 @@
   align-items: center;
   max-width: 500px;
   max-height: 300px;
-  border: 3px solid rgba(0, 0, 0, 0.762);
+  border: 3px solid rgba(108, 124, 128, 0.742);
   border-radius: 6px;
   background-color: rgba(142, 162, 167, 0.742);
+  -webkit-box-shadow: 6px 9px 5px -1px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 6px 9px 5px -1px rgba(0, 0, 0, 0.35);
+  box-shadow: 6px 9px 5px -1px rgba(0, 0, 0, 0.35);
 }
 .create-box-container h2 {
+  text-align: center;
   color: rgb(79, 20, 20);
   font-family: "Poppins", sans-serif;
   font-size: 22px;
   padding: 2vh 10vw 3vh 10vw;
+  width: 40vw;
 }
 
 .create-box-form {
@@ -34,4 +39,10 @@
 .submit-button:hover {
   background-color: rgb(159, 132, 97);
   color: rgb(218, 255, 143);
+}
+
+@media only screen and (max-width: 425px) {
+  .create-box-container h2 {
+    width: 70vw;
+  }
 }
