create button to retrieve specifc item

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,13 @@
   background-color: #000;
   color: #fff;
 }
+
+.App-body {
+  background-color: var(--bg-color);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  padding-bottom: 10vh;
+}
