--- a/src/Pages/FilmsPage/FilmsPage.css
+++ b/src/Pages/FilmsPage/FilmsPage.css
@@ -1,6 +1,7 @@
 .FilmsPage-page-container {
   display: flex;
-  border: 2px solid red;
+  margin-top: 4vh;
+  justify-content: center;
   width: 95vw;
 }
 .FilmsPage-films-buttons-container {
@@ -10,7 +11,6 @@
   height: 80vh;
   overflow: scroll;
   padding-right: 10px;
-  margin-top: 5vh;
 }
 
 .FilmsPage-film-title {
