Working on create

--- a/src/Pages/CharactersPage/CharactersPage.css
+++ b/src/Pages/CharactersPage/CharactersPage.css
@@ -1,14 +1,19 @@
 .CharacterPage-page-container {
   margin-top: 4vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   width: 95vw;
+  border: 3px solid red;
+}
+.CharPage-chars-infobox-container {
+  display: flex;
 }
 .CharacterPage-chars-buttons-container {
   display: flex;
   flex-direction: column;
   border: 3px solid black;
-  height: 80vh;
+  height: 60vh;
   overflow: scroll;
   padding-right: 10px;
   /* margin-top: 5vh; */
@@ -20,4 +25,17 @@
 .CharactersPage-delete-btn {
   width: 25vw;
   border: 1px solid black;
+}
+.CharPage-create-btn {
+  width: 25vw;
+  border: 1px solid black;
+  background-color: burlywood;
+}
+
+.CharPage-create-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff;
 }
