--- a/src/Components/DataDisplayBox/DataDisplay.css
+++ b/src/Components/DataDisplayBox/DataDisplay.css
@@ -1,4 +1,5 @@
 .DataDisplay-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   border: 3px solid black;
@@ -6,4 +7,5 @@
   overflow: scroll;
   padding: 10px;
   width: 50vw;
+  background-color: var(--alabaster);
 }
