--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --alabaster: #eff8e2b6;
   --button-color-clear: #e88e67e5;
   --button-color: #e88d67;
+  --font: "Poppins", sans-serif;
 }
 
 html {
