--- a/src/Components/DataDisplayBox/DataDisplay.css
+++ b/src/Components/DataDisplayBox/DataDisplay.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  border: 3px solid black;
+  border: 3px solid rgba(0, 0, 0, 0.5);
   height: 60vh;
   overflow: scroll;
   padding: 10px;
