--- a/src/Pages/CharactersPage/CharactersPage.css
+++ b/src/Pages/CharactersPage/CharactersPage.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   justify-content: center;
   width: 95vw;
-  border: 3px solid red;
 }
 .CharPage-chars-infobox-container {
   display: flex;
@@ -12,14 +11,17 @@
 .CharacterPage-chars-buttons-container {
   display: flex;
   flex-direction: column;
-  border: 3px solid black;
+  border: 3px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
   height: 60vh;
   overflow: scroll;
   padding-right: 10px;
+  font-family: var(--font);
 }
 .CharacterPage-char-name {
   font-size: calc(10px + 3vmin);
   text-align: left;
+  font-family: var(--font);
 }
 .CharPage-btns-container {
   right: 0;
@@ -35,11 +37,12 @@
   border: 3px solid var(--button-color);
   background-color: transparent;
   margin: 5px 1vw 5px 0;
+  font-family: var(--font);
 }
 .CharPage-create-btn {
   width: 25vw;
   border: 1px solid black;
-  background-color: burlywood;
+  background-color: var(--button-color-clear);
 }
 
 .CharPage-create-form {
@@ -47,5 +50,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid #fff;
+  font-family: var(--font);
 }
