--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,15 @@
   background-color: #000;
   color: #fff;
 }
+.App-site-title {
+  color: #fff;
+  font-family: var(--font);
+  text-align: center;
+  text-shadow: 2px 2px #ff0000;
+  margin-top: 1vh;
+  padding: 0px;
+  font-size: calc(10px + 3vmin);
+}
 
 .App-body {
   background-image: url("./assets/ghiblibg1.jpg");
@@ -59,6 +68,6 @@
   .App-header-links {
     display: flex;
     justify-content: space-between;
-    width: 50vw;
+    width: 90vw;
   }
 }
