--- a/src/Pages/CharactersPage/CharactersPage.css
+++ b/src/Pages/CharactersPage/CharactersPage.css
@@ -51,7 +51,7 @@
   justify-content: center;
   align-items: center;
   font-family: var(--font);
-  margin-top: 3vh;
+  margin-top: 1vh;
 }
 .Char-form-label {
   color: #fff;
@@ -68,11 +68,12 @@
   padding: 5px;
   color: #fff;
   font-size: calc(10px + 1vmin);
+  margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 1024px) {
   .CharacterPage-page-container {
-    margin-top: 12vh;
+    margin-top: 7vh;
     width: 60vw;
   }
   .CharacterPage-chars-buttons-container {
